fix default Twitter msgs, and hide overflow

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -121,7 +121,7 @@ div.clear_both { clear: both;  }
 
 /* Sidebar boxes */
 #twitter-logo { position: absolute; margin-top: 1em; }
-#twitter { margin-top: 3.5em; margin-bottom: 2.5em; font-size: 0.9em; line-height: 1.5em; border: 1px solid #f9f9f9; background-color: #fcfcfc; padding: 0.2em 1em; }
+#twitter { margin-top: 3.5em; margin-bottom: 2.5em; font-size: 0.9em; line-height: 1.5em; border: 1px solid #f9f9f9; background-color: #fcfcfc; padding: 0.2em 1em; overflow: hidden; }
 #twitter ul { list-style: none; padding: 0; margin: 0; }
 #twitter .tweet_first a:first-child { margin-left: 55px; border-bottom-style: dotted;}
 #twitter .tweet_first .tweet_text a { margin: 0; }
